src/codegen/tests/snapshots/rusty__codegen__tests__code_gen_tests__initial_values_in_string_type.snap
---
source: src/codegen/tests/code_gen_tests.rs
expression: result

---
; ModuleID = 'main'
source_filename = "main"

@b = global [11 x i8] c"Monday\00\00\00\00\00"

