src/codegen/tests/snapshots/rusty__codegen__tests__code_gen_tests__inline_enums_are_generated.snap
---
source: src/codegen/tests/code_gen_tests.rs
assertion_line: 2175
expression: result

---
; ModuleID = 'main'
source_filename = "main"

@x = global i32 0
@red = unnamed_addr constant i32 0
@yellow = unnamed_addr constant i32 1
@green = unnamed_addr constant i32 2

