src/codegen/tests/snapshots/rusty__codegen__tests__code_gen_tests__memcpy_for_struct_initialization_in_function.snap
---
source: src/codegen/tests/code_gen_tests.rs
expression: result

---
; ModuleID = 'main'
source_filename = "main"

%__func_a = type { i16 }
%func_interface = type { %__func_a }

@__func_a__init = global %__func_a { i16 1 }

define i16 @func(%func_interface* %0) {
entry:
  %a = getelementptr inbounds %func_interface, %func_interface* %0, i32 0, i32 0
  %func = alloca i16, align 2
  %1 = bitcast %__func_a* %a to i8*
  call void @llvm.memcpy.p0i8.p0i8.i64(i8* align 1 %1, i8* align 1 bitcast (%__func_a* @__func_a__init to i8*), i64 ptrtoint (i16* getelementptr (i16, i16* null, i32 1) to i64), i1 false)
  %func_ret = load i16, i16* %func, align 2
  ret i16 %func_ret
}

; Function Attrs: argmemonly nofree nosync nounwind willreturn
declare void @llvm.memcpy.p0i8.p0i8.i64(i8* noalias nocapture writeonly, i8* noalias nocapture readonly, i64, i1 immarg) #0

attributes #0 = { argmemonly nofree nosync nounwind willreturn }

