src/codegen/tests/snapshots/rusty__codegen__tests__code_gen_tests__multidim_array_access.snap
---
source: src/codegen/tests/code_gen_tests.rs
expression: result
---
; ModuleID = '<internal>'
source_filename = "<internal>"
target datalayout = "[filtered]"
target triple = "[filtered]"

%prg = type { [8 x i32] }

@prg_instance = global %prg zeroinitializer

define void @prg(%prg* %0) {
entry:
  %x = getelementptr inbounds %prg, %prg* %0, i32 0, i32 0
  %tmpVar = getelementptr inbounds [8 x i32], [8 x i32]* %x, i32 0, i32 4
  store i32 3, i32* %tmpVar, align [filtered]
  %tmpVar1 = getelementptr inbounds [8 x i32], [8 x i32]* %x, i32 0, i32 7
  %tmpVar2 = getelementptr inbounds [8 x i32], [8 x i32]* %x, i32 0, i32 3
  %load_tmpVar = load i32, i32* %tmpVar2, align [filtered]
  %tmpVar3 = add i32 %load_tmpVar, 3
  store i32 %tmpVar3, i32* %tmpVar1, align [filtered]
  ret void
}
