src/codegen/tests/snapshots/rusty__codegen__tests__code_gen_tests__nested_array_declaration.snap
---
source: src/codegen/tests/code_gen_tests.rs
expression: result

---
; ModuleID = 'main'
source_filename = "main"

%prg_interface = type { [3 x [2 x i16]] }

@prg_instance = global %prg_interface zeroinitializer

define void @prg(%prg_interface* %0) {
entry:
  %x = getelementptr inbounds %prg_interface, %prg_interface* %0, i32 0, i32 0
  ret void
}

