src/codegen/tests/snapshots/rusty__codegen__tests__code_gen_tests__optional_output_assignment_at_end.snap
---
source: src/codegen/tests/code_gen_tests.rs
assertion_line: 2928
expression: result
---
; ModuleID = 'main'
source_filename = "main"

%foo_interface = type { i32*, i32* }
%main_interface = type { i32, i32 }

@foo_instance = global %foo_interface zeroinitializer
@main_instance = global %main_interface zeroinitializer

define void @foo(%foo_interface* %0) {
entry:
  %output1 = getelementptr inbounds %foo_interface, %foo_interface* %0, i32 0, i32 0
  %output2 = getelementptr inbounds %foo_interface, %foo_interface* %0, i32 0, i32 1
  %deref = load i32*, i32** %output1, align 8
  store i32 1, i32* %deref, align 4
  %deref1 = load i32*, i32** %output2, align 8
  store i32 2, i32* %deref1, align 4
  ret void
}

define void @main(%main_interface* %0) {
entry:
  %var1 = getelementptr inbounds %main_interface, %main_interface* %0, i32 0, i32 0
  %var2 = getelementptr inbounds %main_interface, %main_interface* %0, i32 0, i32 1
  store i32* %var2, i32** getelementptr inbounds (%foo_interface, %foo_interface* @foo_instance, i32 0, i32 0), align 8
  %empty_varinout = alloca i32, align 4
  store i32* %empty_varinout, i32** getelementptr inbounds (%foo_interface, %foo_interface* @foo_instance, i32 0, i32 1), align 8
  call void @foo(%foo_interface* @foo_instance)
  ret void
}

