src/codegen/tests/snapshots/rusty__codegen__tests__code_gen_tests__program_with_and_statement.snap
---
source: src/codegen/tests/code_gen_tests.rs
expression: result
---
; ModuleID = '<internal>'
source_filename = "<internal>"
target datalayout = "[filtered]"
target triple = "[filtered]"

%prg = type { i8, i8 }

@prg_instance = global %prg zeroinitializer

define void @prg(%prg* %0) {
entry:
  %x = getelementptr inbounds %prg, %prg* %0, i32 0, i32 0
  %y = getelementptr inbounds %prg, %prg* %0, i32 0, i32 1
  %load_x = load i8, i8* %x, align [filtered]
  %1 = icmp ne i8 %load_x, 0
  br i1 %1, label %2, label %4

2:                                                ; preds = %entry
  %load_y = load i8, i8* %y, align [filtered]
  %3 = icmp ne i8 %load_y, 0
  br label %4

4:                                                ; preds = %2, %entry
  %5 = phi i1 [ %1, %entry ], [ %3, %2 ]
  ret void
}
